--- a/src/components/Kennel.css
+++ b/src/components/Kennel.css
@@ -8,10 +8,10 @@ button,
 input,
 select,
 textarea {
-  color: #404040;
-  font-family: "Comfortaa", Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.5;
+    color: #404040;
+    font-family: "Comfortaa", Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
 }
 
 h1,
@@ -20,20 +20,26 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Patua One", serif;
-  letter-spacing: 2px;
+    font-family: "Patua One", serif;
+    letter-spacing: 2px;
 }
 
 p {
-  margin-bottom: 1.5em;
-  color: #d6fcff;
-  color: darkslateblue;
+    margin-bottom: 1.5em;
+    color: #d6fcff;
+    color: darkslateblue;
 }
 
 strong {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 address {
-  margin: 0 0 1.5em;
+    margin: 0 0 1.5em;
+}
+
+.page-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
