--- a/src/components/customer/Customer.css
+++ b/src/components/customer/Customer.css
@@ -1,12 +1,6 @@
-.customers {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
 .customer {
     flex-basis: 28%;
     margin: 1em;
     padding: 1em;
-    border: 1px solid goldenrod;
+    border: 1px solid fuchsia;
 }
