--- a/src/components/employee/Employee.css
+++ b/src/components/employee/Employee.css
@@ -1,12 +1,6 @@
-.employees {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
 .employee {
     flex-basis: 28%;
     margin: 1em;
     padding: 1em;
-    border: 1px solid goldenrod;
+    border: 1px solid indianred;
 }
